nuevos componentes controles: ExGridview y ExGridfilter, Gridview extendido * exgridview es un gridview estendido a ordenamiento y fuente en memoria * exgridfilter es la implementacion, permite busquedas, emplea indexacion del exgridview * archivo de listado de componetnes y librerias en docs iniciado.. no es documentacion. * iconos de presentacion flat y despliege en la barra de controles de gambas * iconos de panel de busqueda flat o planos barra de buscar y acciones por defecto * documentacion de codigo fuente minima para finciona * por ahora solo funciona en gambas 3.9 pero hare funcione en gambas 3.5 y 3.1

--- a/exgridview/.component
+++ b/exgridview/.component
@@ -1,6 +1,6 @@
 [Component]
 Key=exgridview
-Version=1.0.0
+Version=1.0.1
 Authors=PICCORO Lenz McKAY <mckaygerhard@gmail.com>,Jorge Carrión <shordi@gmail.com>
-Requires=gb.db,gb.gui,gb.vb,gb.form
+Requires=gb.db,gb.vb,gb.form,gb.qt4
 
