mejorado el ejemplo e implementacion de gridfilter, actualizado projecto con versiones de gambas * el componente exgridfilter necesita qt4 ya que en gtk no exiten los controles * el control y pruebas y ejemplo necesita sqlite como dependencia

--- a/exgridfilter/.component
+++ b/exgridfilter/.component
@@ -2,5 +2,5 @@
 Key=exgridfilter
 Version=1.0.0
 Authors=PICCORO Lenz McKAY gerardo <mckaygerhard@gmail.com>,Jorge Carrion <shordi@gmail.com>
-Requires=gb.db,gb.qt4,gb.vb,gb.form
+Requires=gb.db,gb.vb,gb.form,gb.qt4,gb.qt4.ext
 
