fix ucase y gethttpbuf para obtiener contenido de una url en una cadena/buffer * corregido error en ucase, dim estaba despues y va de primero * para analizar **en crudo**, util para json, xml o para descargar binarios * firma es gethttpbuf(Optional urltogetinfo As String = "") As String * datos es @parameter url : la uri, @return string html de la respuesta, * string "" si invalido o no hay nada, string "-1" si invalido o agotado en server

--- a/exfuntions/.component
+++ b/exfuntions/.component
@@ -2,4 +2,4 @@
 Key=exfuntions
 Version=0.0.1
 Authors=PICCORO Lenz McKAY <mckaygerhard@gmail.com>
-Requires=gb.db,gb.db.mysql,gb.db.odbc,gb.db.postgresql,gb.db.sqlite3,gb.gui,gb.image,gb.net,gb.net.curl,gb.vb,gb.xml,gb.web
+Requires=gb.db,gb.db.mysql,gb.db.odbc,gb.db.postgresql,gb.db.sqlite3,gb.gui,gb.image,gb.net,gb.net.curl,gb.vb,gb.xml,gb.web,gb.util.web,gb.util
