migracion shortnames 3: todo nombre de modulo/clase corto, migrado exgridfilter+exgridview esto aunado a lo contestado en la lista gambas: https://sourceforge.net/p/gambas/mailman/message/36077727/ como esto no se puede, si no es parte del lenguaje en si se hace nombres cortos estos nombres son ahora nombres reservados TODO: relacionada #10 en futuro se fusionara exgridview y exgridfilter

--- a/exgridfilter/.src/egfF.form
+++ b/exgridfilter/.src/egfF.form
@@ -35,7 +35,7 @@
     { Menu2 Menu
     }
   }
-  { !grid exgridview
+  { !grid egv
     MoveScaled(1,1,88,35)
     #Public = True
     Expand = True
