--- a/exgridfilter/.component
+++ b/exgridfilter/.component
@@ -1,5 +1,5 @@
 [Component]
-Key=exgridfilter
+Key=egf
 Version=1.0.0
 Authors=PICCORO Lenz McKAY gerardo <mckaygerhard@gmail.com>,Jorge Carrion <shordi@gmail.com>
 Requires=gb.db,gb.vb,gb.form,gb.qt4,gb.qt4.ext
