--- a/excore/.component
+++ b/excore/.component
@@ -1,6 +1,7 @@
 [Component]
-Key=libmngr
-State=1
+Key=excore
 VersionFile=1
+State=1
 Authors=PICCORO Lenz McKAY <mckaygerhard@gmail.com>
-Requires=gb,gb.compress,gb.compress.bzlib2,gb.compress.zlib,gb.db,gb.db.mysql,gb.db.odbc,gb.db.postgresql,gb.db.sqlite3,gb.eval,gb.net,gb.net.curl,gb.net.smtp,gb.util,gb.settings,gb.web,gb.util.web,gb.xml,gb.xml.html
+Requires=gb,gb.compress,gb.compress.bzlib2,gb.compress.zlib,gb.db,gb.db.mysql,gb.db.odbc,gb.db.postgresql,gb.db.sqlite3,gb.eval,gb.net,gb.net.curl,gb.net.smtp,gb.settings,gb.web,gb.xml,gb.xml.html,gb.pcre
+
