--- a/excore/.component
+++ b/excore/.component
@@ -1,7 +1,6 @@
 [Component]
 Key=excore
-VersionFile=1
+Version=0.0.1
 State=1
 Authors=PICCORO Lenz McKAY <mckaygerhard@gmail.com>
-Requires=gb,gb.compress,gb.compress.bzlib2,gb.compress.zlib,gb.db,gb.db.mysql,gb.db.odbc,gb.db.postgresql,gb.db.sqlite3,gb.eval,gb.net,gb.net.curl,gb.net.smtp,gb.settings,gb.web,gb.xml,gb.xml.html,gb.pcre
-
+Requires=gb,gb.compress,gb.compress.bzlib2,gb.compress.zlib,gb.db,gb.db.mysql,gb.db.odbc,gb.db.postgresql,gb.db.sqlite3,gb.eval,gb.net,gb.net.curl,gb.net.smtp,gb.settings,gb.web,gb.xml,gb.pcre
